# Multi-agent-research-assistant

./: .gitignore  README.md
research_assistant/: .env.example  README.md  pyproject.toml
research_assistant/app/: streamlit_app.py
research_assistant/src/research_assistant/: crew.py  flow.py  main.py  schemas.py
research_assistant/src/research_assistant/api/: router.py  schemas.py
research_assistant/src/research_assistant/config/: agents.yaml  context_tasks.yaml  evaluation_tasks.yaml  synthesis_tasks.yaml  tasks.yaml
research_assistant/src/research_assistant/memory/: zep_memory.py
research_assistant/src/research_assistant/tools/: arxiv_tool.py  firecrawl_tool.py  milvus_rag_tool.py  tensorlake_tool.py
